resolves playerhand issues in UI